# dockify-backend-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: create_container.rs  get_container.rs  get_credits.rs  home.rs  login.rs  signup.rs  verify.rs
src/routes/account/: get_container.rs  get_credits.rs
src/routes/admin/: add_credits.rs  set_credits.rs
src/routes/auth/: login.rs  signup.rs  verify.rs
src/routes/container/: calculator.rs  create.rs  delete.rs  start.rs  stop.rs
src/utils/: container.rs  db.rs  res.rs  resources.rs  validation.rs
