[package]
name = "dockify_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
bollard = "0.17.0"
futures-util = "0.3.30"
serde_json = "1.0.124"
rand = "0.8.5"
lettre = "0.11.9"
dotenvy = "0.15.7"
regex = "1.10.6"
argon2 = "0.5.3"
once_cell = "1.19.0"
tracing = "0.1.40"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
base64 = "0.22.1"
fallible-iterator = "0.3.0"
